k8s/tts-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tts-app
  labels:
    app: tts-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: tts-app

  template:
    metadata:
      labels:
        app: tts-app

    spec:
      containers:
        - name: tts-app
          image: ghcr.io/juststeven-lang/text-to-speech:v0.4.0
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"
