k8s/tts-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tts-service

spec:
  selector:
    app: tts-app

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP
