k8s/tts-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tts-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: tts.steven.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tts-service
                port:
                  number: 80
